--- a/java/src/main/resources/application.properties
+++ b/java/src/main/resources/application.properties
@@ -14,3 +14,4 @@ jwt.route.authentication.path=/login
 jwt.route.authentication.refresh=/refresh
 
 server.error.include-stacktrace=never
+server.port=3000
