--- a/vue/package.json
+++ b/vue/package.json
@@ -10,9 +10,11 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@vue/cli": "^4.5.15",
     "axios": "^0.21.1",
     "buefy": "^0.9.20",
     "core-js": "^3.9.1",
+    "npm": "^8.1.0",
     "vue": "^2.6.12",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
